fixed header z-index issue

--- a/styles/header.css
+++ b/styles/header.css
@@ -8,6 +8,7 @@
   left: 0;
   right: 0;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
+  z-index: 100;
 }
 
 .left-section {
